styles/diagram/_connectionsMenu.scss
.ontodia-connections-menu {
  position: absolute;
  width: 300px;
  height: 300px;
  border-radius: 3px;
  display: flex;
  flex-direction: column;
  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.38);

  &__sort-switch {
    display: none;
  }

  &__sort-switch:checked + &__sort-switch-label {
    color: #337ab7;
    opacity: 1;
  }

  &__sort-switch-label {
    cursor: pointer;
    display: block;
    margin: 0;
    opacity: 0.4;
    text-align: center;

    &:hover {
      opacity: 1;
    }
  }

  &__search-line-input {
    flex: 1 1 100%;
  }
}

.ontodia-connections-menu_bread-crumbs {
  padding: 10px;
  padding-bottom: 0px;
  overflow: hidden;
  text-overflow: ellipsis;
  height: 27px;
  min-height: 27px;
  flex-grow: 0;
}

.ontodia-connections-menu__title-label {
  position: absolute;
  top: -11px;
  left: 10px;
  background: white;
  padding-left: 3px;
  padding-right: 3px;
  border-radius: 6px;
}

.ontodia-connections-menu_search-line {
  padding: 10px;
  display: flex;
  align-items: center;
  flex: 0 0 auto;
}

.ontodia-connections-menu_search-line-sort-switches {
  flex: 0 0 20px;
  margin-left: 10px;
}

.ontodia-connections-menu_links-list {
  padding: 5px;
  overflow-x: hidden;
  overflow-y: auto;
  border-top: 1px solid #dbdbdb;
  flex-grow: 1;
  margin: 0;
}

.ocm_links-list-empty {
  display: flex;
  align-items: center;
}

.ontodia-connections-menu_links-list__empty {
  width: 100%;
  position: relative;
  font-size: x-large;
  color: #cbcbcb;
  text-align: center;
}

.ontodia-connections-menu__loading,
.ontodia-connections-menu__error {
  width: 100%;
  height: 100%;
  position: relative;
  font-size: x-large;
  display: flex;
  color: #cbcbcb;
  align-items: center;
  justify-content: center;
}
.ontodia-connections-menu__loading-objects {
  border: 1px solid gray;
  flex-grow: 1;
  box-shadow: inset 0px 0px 23px -8px gray;
  background-color: whitesmoke;
  position: relative;
  font-size: x-large;
  display: flex;
  color: #cbcbcb;
  align-items: center;
  justify-content: center;
  margin-bottom: 5px;
}

.ontodia-connections-menu__progress-bar {
  opacity: 0;
  height: 0px;
  -webkit-transition: 0.3s;
  -moz-transition: 0.3s;
  transition: 0.3s;

  &--loading {
    height: 10px;
    opacity: 1;
  }

  &--error {
    height: 10px;
    opacity: 1;
    > .progress-bar { background-color: #E72F2F; }
  }
}

.element-in-popup-menu {
  display: flex;
  padding: 5px 10px;
  margin: 5px 10px;
  border-radius: 5px;
  user-select: none;
  cursor: pointer;

  &:hover {
    background-color: #e6e6e6;
  }
}

div.element-in-popup-menu {
  background-color: #d8e7f5;
  border: 1px solid #c4d6e6;
  color: gray;
  
  &:hover {
    background-color: #cdddec;
  }
}

.element-in-popup-menu.unchecked {
  background-color: rgba(255, 255, 255, 0.79);
}
.element-in-popup-menu_disabled-line {
  pointer-events: none;
  cursor: not-allowed;
}

.element-in-popup-menu__checkbox {
  min-width: 13px;
}

.element-in-popup-menu__link-label {
  flex-grow: 1;
  margin-left: 5px;
  overflow: hidden;
  text-overflow: ellipsis;
}

.link-in-popup-menu {
  display: flex;
  overflow: hidden;
  padding: 0px 5px 0px 0px;
  border-radius: 5px;
  align-items: center;
  margin-bottom: 4px;
  box-shadow: 0px 0px 23px -5px #dbdbdb inset;
}

.link-in-popup-menu:hover {
  background-color: whitesmoke;
}

.link-in-popup-menu__link-title {
  flex-grow: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  margin: 5px 0px 5px 5px;
}

.link-in-popup-menu__count {
  flex-shrink: 0;
  margin-left: 10px;
}

.link-in-popup-menu__navigate-button {
  float: right;
  background-image: url("../images/expand-link.png");
  width: 16px;
  height: 16px;
  opacity: 0.5;
  margin-left: 10px;
  min-width: 16px;
  background-size: cover;
}

.link-in-popup-menu__navigate-button:hover {
  opacity: 1;
}

.link-in-popup-menu_direction {
    background: rgba(219, 219, 219, 0.35);
    min-height: 30px;
    padding: 5px 0px 5px 10px;
    display: flex;
    align-items: center;
}

.link-in-popup-menu_direction__in-direction {
  background: url("../images/direction-in.png") 0 0 no-repeat;
  flex-shrink: 0;
  width: 22px;
  height: 15px;
  margin: 0 14px 0 0;
  background-size: contain;
  opacity: 0.5;
}

.link-in-popup-menu_direction__out-direction {
  background: url("../images/direction-out.png") 0 0 no-repeat;
  flex-shrink: 0;
  width: 22px;
  height: 15px;
  margin: 0 8px 0 6px;
  background-size: contain;
  opacity: 0.5;
}

.ontodia-connections-menu_links-list__loading {
  text-align: center;
  width: 100%;
  position: relative;
  font-size: x-large;
  color: #cbcbcb;
}

.ontodia-connections-menu_links-list__hr {
  margin-top: 10px;
  margin-bottom: 10px;
}

.ontodia-connections-menu_objects-panel {
  flex-grow: 1;
  padding: 10px;
  position: relative;
  display: flex;
  flex-direction: column;
  padding-top: 0px;
}

.ontodia-connections-menu_objects-panel__select-all {
    white-space: nowrap;
    margin-bottom: 5px;
    display: flex;

    input {
      display: inline-block;  
    }

    .undefined {
      opacity: 0.3;
    }
    
    span {
      margin-left: 5px;
    }
}


.ontodia-connections-menu_objects-panel_bottom-panel {
  height: 25px;
  white-space: nowrap;
  display: flex;
  justify-content: space-between;
}

.ontodia-connections-menu_objects-panel_bottom-panel__count-label {
  height: 25px;
  float: left;
  padding: 0px 5px;
  font-size: larger;
  display: flex;
  align-items: center;
  max-width: 60%;
}

.ontodia-connections-menu_objects-panel_bottom-panel__count-label .extra {
  color: gray;
}

.ontodia-btn.ontodia-connections-menu_objects-panel_bottom-panel__add-button {
  height: 25px;
  padding-top: 1px;
  padding-bottom: 2px;
}

.ontodia-connections-menu_objects-panel_objects-list {
  border: 1px solid gray;
  height: 0;
  flex-grow: 1;
  box-shadow: inset 0px 0px 23px -8px gray;
  background-color: whitesmoke;
  overflow-x: hidden;
  overflow-y: scroll;
  margin-bottom: 5px;
}

